--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
-    "firebase": "^5.4.2",
     "react": "^16.5.0",
     "react-credit-cards": "^0.7.0",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "firebase": "^5.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
